--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,13 +1,20 @@
+$primary-color: #99bf0d;
+$yellow: #fae005;
+
 html {
     font-family: 'Open Sans', sans-serif;
 }
 
-body {
-    padding: 0.8em;
-}
 
 h1 {
+    background-color: $primary-color;
+    color: $yellow;
     font-size: 2em;
-    padding-bottom: 0.5em;
+    padding: 0.25em;
+    border-bottom: 1px #999 solid;
+    margin-bottom: 0.25em;
 }
 
+p {
+  padding: 0.5em;
+}
